--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
         <javax.annotation-api.version>1.2</javax.annotation-api.version>
 
+        <!-- memcached -->
+        <memcache.version>1.4.2</memcache.version>
+        <danga.version>1.4.2</danga.version>
+
         <spring.version>4.1.6.RELEASE</spring.version>
         <mybatis.version>3.2.7</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
